# uxs-tests

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-tbls.sh  fpconv_tables.cpp  fpconv_tables_bigpow.cpp  main.cpp  test-batch.ps1  test-batch.sh  test.ps1  test.sh
gcc_testsuite/list/: 14340.cpp  18604.cpp  58764.cpp  92124.cpp  check_construct_destroy.cpp  init-list.cpp  range_access.cpp
gcc_testsuite/list/allocator/: copy.cpp  copy_assign.cpp  default_init.cpp  minimal.cpp  move.cpp  move_assign.cpp  noexcept.cpp  swap.cpp
gcc_testsuite/list/capacity/: 1.cpp  29134.cpp  resize_size.cpp
gcc_testsuite/list/cons/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  55979.cpp  6.cpp  7.cpp  8.cpp  87809.cpp  9.cpp  clear_allocator.cpp  cons_size.cpp  deduction.cpp  moveable.cpp  noexcept_move_construct.cpp  self_move.cpp
gcc_testsuite/list/modifiers/: 1.cpp  2.cpp  3.cpp  addressof.cpp
gcc_testsuite/list/operations/: 1.cpp  2.cpp  3.cpp  35969.cpp  4.cpp  42352.cpp  66742.cpp  78389.cpp  80034.cpp  91620.cpp  remove_cxx20_return.cpp  unique_cxx20_return.cpp
gcc_testsuite/list/requirements/: citerators.cpp  do_the_right_thing.cpp  typedefs.cpp
gcc_testsuite/map/: 14340.cpp  18604.cpp  56613.cpp  58764.cpp  59872.cpp  77334.cpp  92124.cpp  init-list.cpp  range_access.cpp
gcc_testsuite/map/allocator/: copy.cpp  copy_assign.cpp  default_init.cpp  init-list.cpp  minimal.cpp  move.cpp  move_assign.cpp  move_cons.cpp  noexcept.cpp  swap.cpp
gcc_testsuite/map/capacity/: 29134.cpp
gcc_testsuite/map/cons/: deduction.cpp  moveable.cpp  noexcept_default_construct.cpp  noexcept_move_construct.cpp
gcc_testsuite/map/element_access/: 1.cpp  2.cpp  39901.cpp  46148.cpp
gcc_testsuite/map/modifiers/: dr130.cpp  extract.cpp  merge.cpp
gcc_testsuite/map/operations/: 1.cpp  2.cpp  31440.cpp  contains.cpp  count.cpp
gcc_testsuite/map/operators/: 1.cpp  2.cpp
gcc_testsuite/map/requirements/: citerators.cpp  typedefs.cpp
gcc_testsuite/multimap/: 14340.cpp  58764.cpp  init-list.cpp  range_access.cpp
gcc_testsuite/multimap/allocator/: copy.cpp  copy_assign.cpp  init-list.cpp  minimal.cpp  move.cpp  move_assign.cpp  move_cons.cpp  noexcept.cpp  swap.cpp
gcc_testsuite/multimap/capacity/: 29134.cpp
gcc_testsuite/multimap/cons/: deduction.cpp  moveable.cpp  noexcept_default_construct.cpp  noexcept_move_construct.cpp
gcc_testsuite/multimap/modifiers/: dr130.cpp  extract.cpp  merge.cpp
gcc_testsuite/multimap/operations/: 1.cpp  2.cpp  contains.cpp  count.cpp
gcc_testsuite/multimap/requirements/: citerators.cpp  typedefs.cpp
gcc_testsuite/multiset/: 14340.cpp  58764.cpp  init-list.cpp  range_access.cpp
gcc_testsuite/multiset/allocator/: 103501.cpp  copy.cpp  copy_assign.cpp  init-list.cpp  minimal.cpp  move.cpp  move_assign.cpp  move_cons.cpp  noexcept.cpp  swap.cpp
gcc_testsuite/multiset/capacity/: 29134.cpp
gcc_testsuite/multiset/cons/: deduction.cpp  moveable.cpp  noexcept_default_construct.cpp  noexcept_move_construct.cpp
gcc_testsuite/multiset/modifiers/: dr130.cpp  extract.cpp  merge.cpp
gcc_testsuite/multiset/operations/: 1.cpp  2.cpp  contains.cpp  count.cpp
gcc_testsuite/multiset/requirements/: citerators.cpp  typedefs.cpp
gcc_testsuite/set/: 14340.cpp  18604.cpp  58764.cpp  85965.cpp  92124.cpp  check_construct_destroy.cpp  init-list.cpp  move_comparison.cpp  range_access.cpp
gcc_testsuite/set/allocator/: 103501.cpp  71964.cpp  copy.cpp  copy_assign.cpp  default_init.cpp  init-list.cpp  minimal.cpp  move.cpp  move_assign.cpp  move_cons.cpp  noexcept.cpp  swap.cpp
gcc_testsuite/set/capacity/: 29134.cpp
gcc_testsuite/set/cons/: 61023.cpp  deduction.cpp  moveable.cpp  noexcept_default_construct.cpp  noexcept_move_construct.cpp  self_move.cpp
gcc_testsuite/set/modifiers/: 16728.cpp  17948.cpp  dr130.cpp  extract.cpp  (+2 more)
gcc_testsuite/util/: testsuite_allocator.cpp  testsuite_allocators.cpp  testsuite_hooks.cpp  testsuite_rvalref.cpp
gcc_testsuite/vector/: 14340.cpp  15523.cpp  18604.cpp  40192.cpp  52591.cpp  58764.cpp  59829.cpp  63500.cpp  70303.cpp  92124.cpp  check_construct_destroy.cpp  debug_mode_requires_reallocation-1.cpp  debug_mode_requires_reallocation-2.cpp  init-list.cpp  range_access.cpp  zero_sized_allocations.cpp
helper/: build-tbls.sh  char_tables.cpp  crc32_table.cpp  fpconv_tables.cpp  fpconv_tables_bigpow.cpp  not_printable_chars_tables.cpp  ulog2_table.cpp
include/: db_value_tests.h  dynarray_tests.h  list_tests.h  rbtree_tests.h  test_allocators.h  test_suite.h  test_types.h  tests.h  thread_pool.h  vector_tests.h
include/uxs/: config.h
src/: algorithm.cpp  algorithm_tests.cpp  cli.cpp  common_tests.cpp  functional.cpp  functional_tests.cpp  guid.cpp  iobuf.cpp  iobuf_tests.cpp  iterator.cpp  json.cpp  json_tests.cpp  list_tests.cpp  math.cpp  math.h  rbtree_bruteforce.h  rbtree_check_balance.cpp  rbtree_perf.h  rbtree_tests.cpp  span.cpp  span_tests.cpp  string_algorithm_tests.cpp  string_conversion_tests.cpp  string_cvt_tests.cpp  string_ext_tests.cpp  string_format_tests.cpp  string_tests.cpp  string_utf_tests.cpp  variant.cpp  variant_tests.cpp  vector_tests.cpp  xml.cpp
src/db_value/: custom_alloc.cpp  exception.cpp  iterator.cpp  scalar.cpp
src/intrusive/: list.cpp
src/list/: bruteforce.cpp  info.cpp  instantiation.cpp  perf.cpp  types.cpp
src/map/: instantiation.cpp  types.cpp  value_comp.cpp
src/multimap/: instantiation.cpp  types.cpp
src/multiset/: bruteforce.cpp  instantiation.cpp  perf.cpp  types.cpp
src/set/: bruteforce.cpp  info.cpp  instantiation.cpp  perf.cpp  types.cpp
src/string/: algorithm.cpp  cvt.cpp  format.cpp  utf.cpp
src/vector/: bruteforce.cpp  info.cpp  instantiation.cpp  perf.cpp  types.cpp
testdata/cli/: test-001.txt  test-002.txt  test-003.txt
testdata/json/: ext-invalid-0001.json  ext-valid-0000.json  invalid-0001.json  invalid-0002.json  invalid-0004.json  invalid-0005.json  invalid-0006.json  legacy_test_object_04.expected  legacy_test_real_12.expected  pass4.json  valid-0014.json  valid-0015.json
testdata/xml/: test-001.xml  test-002.xml
(+359 files in other folders)
